# ieee-fraud-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample_transaction.json
.github/workflows/: ci.yml
app/: main.py  model_registry.py  schemas.py
notebooks/: 00_load_and_inspect.ipynb  01_eda_basics.ipynb  02_baseline.ipynb  03_baseline_with_fe.ipynb  04_encodings.ipynb  05_uid.ipynb  06_feature_selection.ipynb  07_optuna.ipynb  08_catboost.ipynb  09_shap.ipynb
reports/: best_params_v5.json  experiments.md  ideas.md  selected_features_v4.json
src/data/: split.py
src/features/: aggregations.py  build_features.py  encodings.py  money_features.py  time_features.py  uid_features.py
src/inference/: preprocessor.py
tests/: conftest.py  test_api.py  test_preprocessor.py
