[project]
name = "ieee-fraud-detection"
version = "0.1.0"
description = "End-to-end ML pipeline for IEEE-CIS Fraud Detection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Iva-q" }]

dependencies = [
    # Core
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=16.0",
    "scipy>=1.13",

    # ML
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "catboost>=1.2",
    "xgboost>=2.1",
    "category-encoders>=2.6",
    "optuna>=4.0",

    # Interpretability
    "shap>=0.46",

    # Tracking
    "mlflow>=2.16",

    # Viz
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.24",

    # Config & utils
    "pyyaml>=6.0",
    "hydra-core>=1.3",
    "tqdm>=4.66",
    "joblib>=1.4",

    # Kaggle
    "kaggle>=1.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.8",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "jupyter>=1.1",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]

serve = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
